# NeoSuperTinyLanguageModels

./: .gitignore  README.md  inject_data.txt  pyproject.toml  requirements.txt  test_cases_answers.json  test_cases_answers.txt
configs/: generate.yaml  test.yaml  train.yaml
configs/full_configs/: baseline_ziel.yaml  debug_ziel.yaml  gpt2_small.yaml  inject_data.yaml  inject_data_simple_en_wiki.yaml  inject_data_wiki_paragraphs.yaml  insert_data_simple_en_wiki.yaml  insert_data_wiki_paragraphs.yaml  overfit_model.yaml  simple_en_wiki.yaml  simple_en_wiki_resume_checkpoint.yaml  wiki_paragraphs.yaml  wiki_solarsystem.yaml
configs/general/: default.yaml
configs/generator/: baseline.yaml  memo_birth_dates.yaml  prompts.yaml  semantic_birth_dates.yaml  syntactic_birth_dates.yaml
configs/model/: baseline_sports.yaml
configs/prompts/: capitals.yaml  date_of_birth.yaml
configs/testing/: baseline.yaml
configs/trainer/: baseline.yaml  baseline_diff.yaml  baseline_sports.yaml
configs/trash/: debug_ziel.yaml  insert_data_wiki_paragraphs.yaml  tokenize.yaml  wiki_biology.yaml  wiki_paragraphs_debug.yaml
data/inject/: inject_data.txt  test_cases_answers.json  test_cases_answers.txt  test_cases_answers_by_type.json  test_cases_answers_by_type.txt
notebooks/: models.ipynb  shuffle_dataset.ipynb
scripts/: compare_models.py  custom_providers.py  fake_data.py  fake_data_utils.py  gen_inject.py  gen_insert.py  gen_sentences.py  generate_injections.py  inject_data.json  insert_dataset.py  providers.py
scripts/fake/: color.txt  degree.txt  fluency.txt  item.txt  language.txt  location_phrase.txt  profession.txt  subject.txt  university.txt  verb.txt
scripts/plots/: gen_plots.ipynb
src/: generate.py  train.py
src/core/: logger.py
src/data/: datasets.py  processors.py
src/evals/: eval_wrapper.py  evaluator_interface.py  load_evaluators.py  metrics.py
(+143 files in other folders)
